--- a/addtohomescreen/index.html
+++ b/addtohomescreen/index.html
@@ -8,7 +8,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link rel="shortcut icon" href="icons/favicon.ico" type="text/css"/>
   <script src="service-worker.js"></script>
-    <link rel="manifest" href="manifest.json">
+    <link rel="manifest" href="manifest.webmanifest">
 	<style>
 		.error-log-container {
 			text-align: center;
